# chestnut

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
chestnut/: CMakeLists.txt
chestnut/include/: client.hpp  discover.hpp  room.hpp  server.hpp  serveriml.hpp  sockaddr.hpp
chestnut/src/: client.cpp  room.cpp  server.cpp
cli/: CMakeLists.txt
cli/src/: main.cpp
discover/: Cargo.toml
discover/src/: main.rs
gui/: CMakeLists.txt  Main.qml
gui/include/: application.hpp  chestnut.hpp
gui/src/: chestnut.cpp  main.cpp
include/: client.hpp  ip_addr.hpp  sockaddr.hpp  socket.hpp  socket_addr.hpp
include/glad/: gl.h  glad.h
src/: glad.c  ip_addr.cpp  main.cpp  server.cpp  socket.cpp
